Height Viewport component supports selector for Offset Bottom option

--- a/tests/height-viewport.html
+++ b/tests/height-viewport.html
@@ -167,8 +167,8 @@
                         <tr>
                             <td><code>offset-bottom</code></td>
                             <td>false</td>
-                            <td>Boolean|Number|Pixel</td>
-                            <td>Subtracts the element's immediately following sibling's height (true), the given percentage (Number) or Pixel (px) value from its own height.</td>
+                            <td>Boolean|Number|Pixel|selector</td>
+                            <td>Subtracts the element's immediately following sibling's height (true), the given percentage (Number), Pixel (px) value from its own height or the given element's height.</td>
                         </tr>
                     </tbody>
                 </table>
