scale effect added

--- a/tests/slideshow.html
+++ b/tests/slideshow.html
@@ -69,6 +69,24 @@
                 </div>
             </div>
 
+            <h3>Scale</h3>
+            <div class="uk-slideshow" uk-slideshow="animation:scale">
+                <div class="uk-slideshow-slides">
+                    <div>
+                        <canvas style="background:red" width="6000" height="4000"></canvas>
+                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 1</div>
+                    </div>
+                    <div>
+                        <canvas style="background:blue" width="6000" height="4000"></canvas>
+                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 2</div>
+                    </div>
+                    <div>
+                        <canvas style="background:green" width="6000" height="4000"></canvas>
+                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 3</div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </body>
