Component Constructor initializes and returns single component only

--- a/tests/lightbox.html
+++ b/tests/lightbox.html
@@ -152,7 +152,7 @@
                             {source: 'images/size1.jpg', title: '900x600', type: 'image'},
                             {source: 'images/size2.jpg', title: '700x500', type: 'image'},
                         ]
-                    })[0].show();
+                    }).show();
                 });
 
             })();
