--- a/tests/offcanvas.html
+++ b/tests/offcanvas.html
@@ -627,7 +627,7 @@
                 $('#toggle').on('click', function (e) {
 
                     e.preventDefault();
-                    UIkit.offcanvas('#offcanvas-toggle')[0].toggle();
+                    UIkit.offcanvas('#offcanvas-toggle').toggle();
 
                 });
 
