--- a/tests/scroll.html
+++ b/tests/scroll.html
@@ -25,7 +25,7 @@
             <script type="text/javascript">
                 jQuery(function ($) {
 
-                    UIkit.scroll($('#top-callback'))[0].$el.on('scrolled', function () {
+                    UIkit.scroll($('#top-callback')).$el.on('scrolled', function () {
                         alert('I\'m down!');
                     });
 
