--- a/tests/slideshow.html
+++ b/tests/slideshow.html
@@ -14,75 +14,97 @@
         <div class="uk-container">
 
             <h1>Slideshow</h1>
-            
-            <h3>Swipe</h3>
-            <div class="uk-slideshow" uk-slideshow="animation:swipe">
-                <div class="uk-slideshow-slides">
-                    <div>
-                        <canvas style="background:red" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 1</div>
-                    </div>
-                    <div>
-                        <canvas style="background:blue" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 2</div>
-                    </div>
-                    <div>
-                        <canvas style="background:green" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 3</div>
+
+
+            <div class="uk-child-width-1-3@m" uk-grid>
+
+                <div>
+                    <h3>Swipe</h3>
+                    <div class="uk-slideshow" uk-slideshow="animation:swipe">
+                        <div class="uk-slideshow-slides">
+                            <div>
+                                <img src="images/size1.jpg" alt="">
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                            </div>
+                            <div>
+                                <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
+                                </video>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                            </div>
+                            <div>
+                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <h3>Slide</h3>
-            <div class="uk-slideshow" uk-slideshow="animation:slide">
-                <div class="uk-slideshow-slides">
-                    <div>
-                        <canvas style="background:red" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 1</div>
-                    </div>
-                    <div>
-                        <canvas style="background:blue" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 2</div>
-                    </div>
-                    <div>
-                        <canvas style="background:green" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 3</div>
-                    </div>
-                </div>
-            </div>
-
-            <h3>Fade</h3>
-            <div class="uk-slideshow" uk-slideshow="animation:fade">
-                <div class="uk-slideshow-slides">
-                    <div>
-                        <canvas style="background:red" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 1</div>
-                    </div>
-                    <div>
-                        <canvas style="background:blue" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 2</div>
-                    </div>
-                    <div>
-                        <canvas style="background:green" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 3</div>
+                <div>
+                    <h3>Slide</h3>
+                    <div class="uk-slideshow" uk-slideshow="animation:slide;autoplay:2500">
+                        <div class="uk-slideshow-slides">
+                            <div>
+                                <img src="images/size1.jpg" alt="">
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                            </div>
+                            <div>
+                                <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
+                                </video>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                            </div>
+                            <div>
+                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div>
+                    <h3>Fade</h3>
+                    <div class="uk-slideshow" uk-slideshow="animation:fade">
+                        <div class="uk-slideshow-slides">
+                            <div>
+                                <img src="images/size1.jpg" alt="">
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                            </div>
+                            <div>
+                                <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
+                                </video>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                            </div>
+                            <div>
+                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Scale</h3>
-            <div class="uk-slideshow" uk-slideshow="animation:scale">
-                <div class="uk-slideshow-slides">
-                    <div>
-                        <canvas style="background:red" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 1</div>
-                    </div>
-                    <div>
-                        <canvas style="background:blue" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 2</div>
-                    </div>
-                    <div>
-                        <canvas style="background:green" width="6000" height="4000"></canvas>
-                        <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Slide 3</div>
+                <div>
+                    <h3>Scale</h3>
+                    <div class="uk-slideshow" uk-slideshow="animation:scale">
+                        <div class="uk-slideshow-slides">
+                            <div>
+                                <img src="images/size1.jpg" alt="">
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                            </div>
+                            <div>
+                                <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
+                                    <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
+                                </video>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                            </div>
+                            <div>
+                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
