fix heading line

--- a/tests/icon.html
+++ b/tests/icon.html
@@ -112,7 +112,7 @@
                                 <li><span class="uk-margin-small-right" uk-icon="icon: tablet"></span> tablet</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: phone"></span> phone</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: tablet-landscape"></span> tablet-landscape</li>
-                                <li><span class="uk-margin-small-right" uk-icon="icon: phone-landscape"></span> phone landscape</li>
+                                <li><span class="uk-margin-small-right" uk-icon="icon: phone-landscape"></span> phone-landscape</li>
 
 
                             </ul>
