renamed phone receiver icon to receiver

--- a/tests/icon.html
+++ b/tests/icon.html
@@ -48,7 +48,7 @@
                                 <li><span class="uk-margin-small-right" uk-icon="icon: cart"></span> cart</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: credit-card"></span> credit-card</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: mail"></span> mail</li>
-                                <li><span class="uk-margin-small-right" uk-icon="icon: phone-receiver"></span> phone-receiver</li>
+                                <li><span class="uk-margin-small-right" uk-icon="icon: receiver"></span> receiver</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: search"></span> search</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: location"></span> location</li>
                                 <li><span class="uk-margin-small-right" uk-icon="icon: bookmark"></span> bookmark</li>
@@ -221,7 +221,7 @@
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: cart"></a></li>
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: credit-card"></a></li>
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: mail"></a></li>
-                        <li><a class="uk-icon-link" href="#" uk-icon="icon: phone-receiver"></a></li>
+                        <li><a class="uk-icon-link" href="#" uk-icon="icon: receiver"></a></li>
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: search"></a></li>
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: location"></a></li>
                         <li><a class="uk-icon-link" href="#" uk-icon="icon: bookmark"></a></li>
@@ -368,7 +368,7 @@
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: cart"></a></li>
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: credit-card"></a></li>
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: mail"></a></li>
-                        <li><a class="uk-icon-button" href="#" uk-icon="icon: phone-receiver"></a></li>
+                        <li><a class="uk-icon-button" href="#" uk-icon="icon: receiver"></a></li>
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: search"></a></li>
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: location"></a></li>
                         <li><a class="uk-icon-button" href="#" uk-icon="icon: bookmark"></a></li>
@@ -514,7 +514,7 @@
                         <li><span uk-icon="ratio: 2; icon: cart"></span></li>
                         <li><span uk-icon="ratio: 2; icon: credit-card"></span></li>
                         <li><span uk-icon="ratio: 2; icon: mail"></span></li>
-                        <li><span uk-icon="ratio: 2; icon: phone-receiver"></span></li>
+                        <li><span uk-icon="ratio: 2; icon: receiver"></span></li>
                         <li><span uk-icon="ratio: 2; icon: search"></span></li>
                         <li><span uk-icon="ratio: 2; icon: location"></span></li>
                         <li><span uk-icon="ratio: 2; icon: bookmark"></span></li>
