fix search overlay layout markup

--- a/tests/search.html
+++ b/tests/search.html
@@ -156,7 +156,7 @@
 
                 <div class="uk-navbar-left uk-flex-1 test-overlay" hidden>
 
-                    <div class="uk-navbar-item uk-width-1-1">
+                    <div class="uk-navbar-item uk-width-expand">
                         <form class="uk-search uk-search-navbar uk-width-1-1">
                             <input class="uk-search-input" type="search" placeholder="Search..." autofocus>
                         </form>
