fix dotnav test

--- a/tests/dotnav.html
+++ b/tests/dotnav.html
@@ -44,14 +44,16 @@
 
                     <div class="uk-inline uk-light">
                         <img src="images/dark.jpg" alt="">
-                        <ul class="uk-dotnav uk-position-medium uk-position-bottom-center">
-                            <li class="uk-active"><a href="#">Item 1</a></li>
-                            <li><a href="#">Item 2</a></li>
-                            <li><a href="#">Item 3</a></li>
-                            <li><a href="#">Item 4</a></li>
-                            <li><a href="#">Item 5</a></li>
-                            <li><a href="#">Item 6</a></li>
-                        </ul>
+                        <div class="uk-position-medium uk-position-bottom-center">
+                            <ul class="uk-dotnav">
+                                <li class="uk-active"><a href="#">Item 1</a></li>
+                                <li><a href="#">Item 2</a></li>
+                                <li><a href="#">Item 3</a></li>
+                                <li><a href="#">Item 4</a></li>
+                                <li><a href="#">Item 5</a></li>
+                                <li><a href="#">Item 6</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
@@ -59,14 +61,16 @@
 
                     <div class="uk-inline uk-dark">
                         <img src="images/light.jpg" alt="">
-                        <ul class="uk-dotnav uk-dotnav-vertical uk-position-medium uk-position-center-right">
-                            <li class="uk-active"><a href="#">Item 1</a></li>
-                            <li><a href="#">Item 2</a></li>
-                            <li><a href="#">Item 3</a></li>
-                            <li><a href="#">Item 4</a></li>
-                            <li><a href="#">Item 5</a></li>
-                            <li><a href="#">Item 6</a></li>
-                        </ul>
+                        <div class="uk-position-medium uk-position-center-right">
+                            <ul class="uk-dotnav uk-dotnav-vertical">
+                                <li class="uk-active"><a href="#">Item 1</a></li>
+                                <li><a href="#">Item 2</a></li>
+                                <li><a href="#">Item 3</a></li>
+                                <li><a href="#">Item 4</a></li>
+                                <li><a href="#">Item 5</a></li>
+                                <li><a href="#">Item 6</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
