Add text background

--- a/tests/text.html
+++ b/tests/text.html
@@ -60,6 +60,13 @@
                         <li><a class="uk-text-danger" href="#">Link with text-danger</a></li>
                     </ul>
 
+                    <h3>Background</h3>
+
+                    <ul class="uk-list">
+                        <li><span class="uk-text-background">text-background</span></li>
+                        <li><a class="uk-text-background" href="#">Link with text-background</a></li>
+                    </ul>
+
                     <div class="uk-child-width-1-2" uk-grid>
                         <div>
 
