--- a/tests/navbar.html
+++ b/tests/navbar.html
@@ -1988,14 +1988,11 @@
 
             var tracker = new UIkit.util.MouseTracker(),
                 target = $('#mousetarget');
-
             $('#mousetracker')
                 .on('mouseenter', function () {tracker.init()})
                 .on('mouseleave', function () {tracker.cancel()})
-                .on('mousemove', function (e) {
-                    if (!UIkit.util.isWithin(e.target, target.parent())) {
-                        target.text(tracker.movesTo(target.parent()) ? 'Moves to' : 'Moves away');
-                    }
+                .on('mousemove', function () {
+                    target.text(tracker.movesTo(target.parent()) ? 'Moves to' : 'Moves away');
                 });
 
         </script>
