Fix navbar groups center left/right in IE 11

--- a/tests/navbar.html
+++ b/tests/navbar.html
@@ -1481,7 +1481,7 @@
             <nav class="uk-navbar-container uk-margin" uk-navbar>
                 <div class="uk-navbar-center">
 
-                    <div class="uk-navbar-center-left">
+                    <div class="uk-navbar-center-left"><div>
                         <ul class="uk-navbar-nav">
                             <li class="uk-active"><a href="#">Active</a></li>
                             <li>
@@ -1509,11 +1509,11 @@
                                 <div class="uk-navbar-dropdown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                             </li>
                         </ul>
-                    </div>
+                    </div></div>
 
                     <a class="uk-navbar-item uk-logo" href="#">Logo</a>
 
-                    <div class="uk-navbar-center-right">
+                    <div class="uk-navbar-center-right"><div>
                         <ul class="uk-navbar-nav">
                             <li class="uk-active"><a href="#">Active</a></li>
                             <li>
@@ -1544,7 +1544,7 @@
                         <div class="uk-navbar-item">
                             <div>Some <a href="#">Link</a></div>
                         </div>
-                    </div>
+                    </div></div>
 
                 </div>
             </nav>
@@ -1578,7 +1578,7 @@
                 </div>
                 <div class="uk-navbar-center">
 
-                    <div class="uk-navbar-center-left">
+                    <div class="uk-navbar-center-left"><div>
                         <ul class="uk-navbar-nav">
                             <li class="uk-active"><a href="#">Active</a></li>
                             <li>
@@ -1606,11 +1606,11 @@
                                 <div class="uk-navbar-dropdown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                             </li>
                         </ul>
-                    </div>
+                    </div></div>
 
                     <a class="uk-navbar-item uk-logo" href="#">Logo</a>
 
-                    <div class="uk-navbar-center-right">
+                    <div class="uk-navbar-center-right"><div>
                         <ul class="uk-navbar-nav">
                             <li class="uk-active"><a href="#">Active</a></li>
                             <li>
@@ -1641,7 +1641,7 @@
                         <div class="uk-navbar-item">
                             <div>Some <a href="#">Link</a></div>
                         </div>
-                    </div>
+                    </div></div>
 
                 </div>
                 <div class="uk-navbar-right">
