--- a/tests/background.html
+++ b/tests/background.html
@@ -20,7 +20,7 @@
             <div class="uk-child-width-1-4" uk-grid>
                 <div>
 
-                    <div class="uk-background-norepeat uk-background-image@s uk-background uk-background-top-left uk-padding uk-flex uk-flex-center uk-flex-middle uk-text-center" style="background-image: url('images/photo.jpg'); background-size: 60px 40px;">Default<br>Top Left</br>S</div>
+                    <div class="uk-background-norepeat uk-background-image@s uk-background-default uk-background-top-left uk-padding uk-flex uk-flex-center uk-flex-middle uk-text-center" style="background-image: url('images/photo.jpg'); background-size: 60px 40px;">Default<br>Top Left</br>S</div>
 
                 </div>
                 <div>
