--- a/tests/slideshow.html
+++ b/tests/slideshow.html
@@ -31,11 +31,7 @@
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
-                            </div>
-                            <div>
-                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-scale-up">Video</div>
                             </div>
                         </div>
                     </div>
@@ -55,10 +51,6 @@
                                 </video>
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
                             </div>
-                            <div>
-                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,10 +68,6 @@
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
-                            </div>
-                            <div>
-                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
                             </div>
                         </div>
                     </div>
@@ -99,10 +87,6 @@
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
-                            </div>
-                            <div>
-                                <iframe src="http://www.youtube.com/embed/YE7VzlLtp-4?autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent&amp;enablejsapi=1&amp;api=1" width="600" height="400" frameborder="0" allowfullscreen=""></iframe>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Youtube</div>
                             </div>
                         </div>
                     </div>
