update slideshow test

--- a/tests/slideshow.html
+++ b/tests/slideshow.html
@@ -24,14 +24,14 @@
                         <div class="uk-slideshow-slides">
                             <div>
                                 <img src="images/size1.jpg" alt="">
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-top">Image</div>
                             </div>
                             <div>
                                 <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-scale-up">Video</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-bottom">Video</div>
                             </div>
                         </div>
                     </div>
@@ -42,14 +42,14 @@
                         <div class="uk-slideshow-slides">
                             <div>
                                 <img src="images/size1.jpg" alt="">
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-bottom">Image</div>
                             </div>
                             <div>
                                 <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-bottom">Video</div>
                             </div>
                         </div>
                     </div>
@@ -60,14 +60,14 @@
                         <div class="uk-slideshow-slides">
                             <div>
                                 <img src="images/size1.jpg" alt="">
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-fade">Image</div>
                             </div>
                             <div>
                                 <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-fade">Video</div>
                             </div>
                         </div>
                     </div>
@@ -79,14 +79,14 @@
                         <div class="uk-slideshow-slides">
                             <div>
                                 <img src="images/size1.jpg" alt="">
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Image</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-scale-up">Image</div>
                             </div>
                             <div>
                                 <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1">Video</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-scale-up">Video</div>
                             </div>
                         </div>
                     </div>
