--- a/tests/slideshow.html
+++ b/tests/slideshow.html
@@ -24,16 +24,31 @@
                         <div class="uk-slideshow-slides">
                             <div>
                                 <img src="images/size1.jpg" alt="">
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-top">Image</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-text-center uk-flex-middle">
+                                    <div>
+                                        <h3>Image</h3>
+                                        <p class="uk-animation-slide-top uk-light">Animation</p>
+                                    </div>
+                                </div>
                             </div>
                             <div>
                                 <video autoplay="" loop="" muted="" uk-cover="" class="uk-cover">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4?test1" type="video/mp4">
                                     <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv?test1" type="video/ogg">
                                 </video>
-                                <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-bottom">Video</div>
+                                <div class="uk-position-cover uk-flex uk-flex-center uk-text-center uk-flex-middle">
+                                    <div>
+                                        <h3>Video</h3>
+                                        <p class="uk-animation-slide-bottom uk-light">Animation</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
+                        <ul class="uk-dotnav uk-margin uk-flex-center">
+                            <li uk-slide-item="0"><a href="#">Item 1</a></li>
+                            <li uk-slide-item="1"><a href="#">Item 2</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div>
@@ -52,6 +67,11 @@
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-slide-bottom">Video</div>
                             </div>
                         </div>
+
+                        <ul class="uk-dotnav uk-margin uk-flex-center">
+                            <li uk-slide-item="0"><a href="#">Item 1</a></li>
+                            <li uk-slide-item="1"><a href="#">Item 2</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div>
@@ -70,6 +90,11 @@
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-fade">Video</div>
                             </div>
                         </div>
+
+                        <ul class="uk-dotnav uk-margin uk-flex-center">
+                            <li uk-slide-item="0"><a href="#">Item 1</a></li>
+                            <li uk-slide-item="1"><a href="#">Item 2</a></li>
+                        </ul>
                     </div>
                 </div>
 
@@ -89,6 +114,11 @@
                                 <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-h1 uk-animation-scale-up">Video</div>
                             </div>
                         </div>
+
+                        <ul class="uk-dotnav uk-margin uk-flex-center">
+                            <li uk-slide-item="0"><a href="#">Item 1</a></li>
+                            <li uk-slide-item="1"><a href="#">Item 2</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
